# flowistry

./: Cargo.toml  rust-toolchain.toml
crates/flowistry/src/: test_utils.rs
crates/flowistry/src/infoflow/: analysis.rs  recursive.rs
crates/flowistry/src/mir/: aliases.rs  engine.rs  placeinfo.rs  utils.rs
crates/flowistry_ide/src/focus/: direct_influence.rs
crates/flowistry_ifc/src/: analysis.rs
