[workspace]
members = ["crates/*"]
exclude = ["ide/src/tests/mock_project"]
resolver = "2"

[workspace.dependencies]
rustc_plugin = { path = "../rustc_plugin/crates/rustc_plugin" }
rustc_utils = { path = "../rustc_plugin/crates/rustc_utils", features = [
    "indexical",
] }
indexical = { version = "0.6.1", default-features = false, features = [
    "rustc",
] }

[profile.bench]
debug = true
